--- a/index.html
+++ b/index.html
@@ -84,9 +84,75 @@
             box-shadow: 0 10px 25px rgba(102, 126, 234, 0.3);
         }
 
+        /* Mobile Menu */
+        .mobile-menu-btn {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+            padding: 5px;
+        }
+
+        .mobile-menu-btn span {
+            width: 25px;
+            height: 3px;
+            background: #333;
+            margin: 3px 0;
+            transition: 0.3s;
+        }
+
+        .mobile-menu-btn.active span:nth-child(1) {
+            transform: rotate(-45deg) translate(-5px, 6px);
+        }
+
+        .mobile-menu-btn.active span:nth-child(2) {
+            opacity: 0;
+        }
+
+        .mobile-menu-btn.active span:nth-child(3) {
+            transform: rotate(45deg) translate(-5px, -6px);
+        }
+
+        .mobile-menu {
+            display: none;
+            position: fixed;
+            top: 80px;
+            left: 0;
+            width: 100%;
+            background: rgba(255, 255, 255, 0.98);
+            backdrop-filter: blur(10px);
+            padding: 2rem;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+        }
+
+        .mobile-menu.active {
+            display: block;
+        }
+
+        .mobile-menu ul {
+            list-style: none;
+            text-align: center;
+        }
+
+        .mobile-menu ul li {
+            margin: 1rem 0;
+        }
+
+        .mobile-menu ul li a {
+            text-decoration: none;
+            color: #333;
+            font-size: 1.2rem;
+            font-weight: 500;
+            transition: color 0.3s ease;
+        }
+
+        .mobile-menu ul li a:hover {
+            color: #667eea;
+        }
+
         /* Hero Section */
         .hero {
             height: 100vh;
+            min-height: 600px;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             display: flex;
             align-items: center;
@@ -114,6 +180,8 @@
             color: white;
             z-index: 10;
             position: relative;
+            text-align: center;
+            width: 100%;
         }
 
         .hero h1 {
@@ -129,11 +197,15 @@
             margin-bottom: 2rem;
             opacity: 0;
             animation: slideUp 1s ease 0.7s forwards;
+            max-width: 600px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .hero-buttons {
             display: flex;
             gap: 1rem;
+            justify-content: center;
             opacity: 0;
             animation: slideUp 1s ease 0.9s forwards;
         }
@@ -227,7 +299,7 @@
             margin-bottom: 1.5rem;
         }
 
-        .about-image {
+        .about-video {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             height: 400px;
             border-radius: 20px;
@@ -237,6 +309,13 @@
             color: white;
             font-size: 1.2rem;
             text-align: center;
+            overflow: hidden;
+        }
+
+        .about-video iframe {
+            width: 100%;
+            height: 100%;
+            border-radius: 20px;
         }
 
         /* Services Section */
@@ -294,7 +373,7 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 4rem;
-            align-items: center;
+            align-items: start;
         }
 
         .contact-form {
@@ -368,8 +447,181 @@
 
         /* Mobile Responsiveness */
         @media (max-width: 768px) {
+            .container {
+                padding: 0 15px;
+            }
+
+            /* Navigation */
             .nav-links {
                 display: none;
+            }
+
+            .mobile-menu-btn {
+                display: flex;
+            }
+
+            .cta-button {
+                display: none;
+            }
+
+            .logo {
+                font-size: 1.5rem;
+            }
+
+            /* Hero Section */
+            .hero {
+                min-height: 80vh;
+                padding: 2rem 0;
+            }
+
+            .hero h1 {
+                font-size: 2.5rem;
+                line-height: 1.2;
+            }
+
+            .hero p {
+                font-size: 1.1rem;
+                margin-bottom: 2rem;
+            }
+
+            .hero-buttons {
+                flex-direction: column;
+                align-items: center;
+                gap: 1rem;
+            }
+
+            .btn-primary,
+            .btn-secondary {
+                width: 200px;
+                text-align: center;
+            }
+
+            /* Sections */
+            section {
+                padding: 3rem 0;
+            }
+
+            .section-title {
+                font-size: 2rem;
+                margin-bottom: 2rem;
+            }
+
+            .section-subtitle {
+                font-size: 1.1rem;
+                margin-bottom: 3rem;
+            }
+
+            /* About Section */
+            .about-content {
+                grid-template-columns: 1fr;
+                gap: 2rem;
+            }
+
+            .about-text h3 {
+                font-size: 1.8rem;
+            }
+
+            .about-text p {
+                font-size: 1rem;
+            }
+
+            .about-video {
+                height: 250px;
+                order: -1;
+            }
+
+            /* Services Section */
+            .services-grid {
+                grid-template-columns: 1fr;
+                gap: 1.5rem;
+            }
+
+            .service-card {
+                padding: 2rem;
+            }
+
+            .service-icon {
+                width: 60px;
+                height: 60px;
+                font-size: 1.5rem;
+            }
+
+            .service-card h3 {
+                font-size: 1.3rem;
+            }
+
+            /* Contact Section */
+            .contact-content {
+                grid-template-columns: 1fr;
+                gap: 2rem;
+            }
+
+            .contact-info {
+                order: -1;
+                text-align: center;
+            }
+
+            .contact-info h3 {
+                font-size: 1.8rem;
+            }
+
+            .contact-info p {
+                font-size: 1rem;
+            }
+
+            .contact-form {
+                padding: 1.5rem;
+            }
+
+            /* Footer */
+            footer p {
+                font-size: 0.9rem;
+                padding: 0 1rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .hero h1 {
+                font-size: 2rem;
+            }
+
+            .hero p {
+                font-size: 1rem;
+            }
+
+            .section-title {
+                font-size: 1.8rem;
+            }
+
+            .about-text h3 {
+                font-size: 1.6rem;
+            }
+
+            .contact-info h3 {
+                font-size: 1.6rem;
+            }
+
+            .service-card {
+                padding: 1.5rem;
+            }
+
+            .about-video {
+                height: 200px;
+            }
+
+            .btn-primary,
+            .btn-secondary {
+                width: 100%;
+                padding: 0.8rem 1.5rem;
+            }
+        }
+
+        /* Landscape orientation fixes for mobile */
+        @media (max-height: 500px) and (orientation: landscape) {
+            .hero {
+                height: auto;
+                min-height: 100vh;
+                padding: 6rem 0 2rem;
             }
 
             .hero h1 {
@@ -377,22 +629,29 @@
             }
 
             .hero p {
-                font-size: 1.1rem;
+                font-size: 1rem;
+                margin-bottom: 1.5rem;
+            }
+        }
+
+        /* Touch-friendly improvements */
+        @media (hover: none) and (pointer: coarse) {
+            .service-card:hover {
+                transform: none;
             }
 
-            .hero-buttons {
-                flex-direction: column;
-                align-items: center;
+            .btn-primary:hover,
+            .btn-secondary:hover,
+            .cta-button:hover {
+                transform: none;
             }
 
-            .about-content,
-            .contact-content {
-                grid-template-columns: 1fr;
-                gap: 2rem;
-            }
-
-            .section-title {
-                font-size: 2rem;
+            .service-card,
+            .btn-primary,
+            .btn-secondary,
+            .cta-button,
+            .submit-btn {
+                cursor: pointer;
             }
         }
     </style>
@@ -410,7 +669,20 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
                 <a href="#contact" class="cta-button">Get Started</a>
+                <div class="mobile-menu-btn" id="mobileMenuBtn">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
+        </div>
+        <div class="mobile-menu" id="mobileMenu">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
         </div>
     </nav>
 
@@ -440,17 +712,16 @@
                     <p>Our approach combines industry expertise with cutting-edge technology to deliver results that exceed expectations.</p>
                     <a href="#contact" class="cta-button">Partner With Us</a>
                 </div>
-                <div class="about-image">
-                    <div><iframe 
-    width="560" 
-    height="315" 
-    src="https://www.youtube.com/embed/53yPfrqbpkE?autoplay=1&mute=1&controls=0&disablekb=1&modestbranding=1&rel=0&playsinline=1&fs=0" 
-    title="YouTube video player" 
-    frameborder="0" 
-    allow="autoplay; encrypted-media" 
-    allowfullscreen="false">
-</iframe>
-</div>
+                <div class="about-video">
+                    <iframe 
+                        width="560" 
+                        height="315" 
+                        src="https://www.youtube.com/embed/53yPfrqbpkE?autoplay=1&mute=1&controls=0&disablekb=1&modestbranding=1&rel=0&playsinline=1&fs=0" 
+                        title="YouTube video player" 
+                        frameborder="0" 
+                        allow="autoplay; encrypted-media" 
+                        allowfullscreen="false">
+                    </iframe>
                 </div>
             </div>
         </div>
@@ -491,7 +762,7 @@
                     <p>Let's discuss how we can help transform your business. Reach out today for a free consultation.</p>
                     <p><strong>Email:</strong> Write Email Here</p>
                     <p><strong>Phone:</strong> Write Phone Number Here</p>
-                    <p><strong>Address:</strong> Write Adress Here</p>
+                    <p><strong>Address:</strong> Write Address Here</p>
                 </div>
                 <form class="contact-form" id="contactForm">
                     <div class="form-group">
@@ -524,15 +795,41 @@
     </footer>
 
     <script>
+        // Mobile menu toggle
+        const mobileMenuBtn = document.getElementById('mobileMenuBtn');
+        const mobileMenu = document.getElementById('mobileMenu');
+
+        mobileMenuBtn.addEventListener('click', function() {
+            this.classList.toggle('active');
+            mobileMenu.classList.toggle('active');
+        });
+
+        // Close mobile menu when clicking on a link
+        document.querySelectorAll('.mobile-menu a').forEach(link => {
+            link.addEventListener('click', function() {
+                mobileMenuBtn.classList.remove('active');
+                mobileMenu.classList.remove('active');
+            });
+        });
+
+        // Close mobile menu when clicking outside
+        document.addEventListener('click', function(e) {
+            if (!mobileMenuBtn.contains(e.target) && !mobileMenu.contains(e.target)) {
+                mobileMenuBtn.classList.remove('active');
+                mobileMenu.classList.remove('active');
+            }
+        });
+
         // Smooth scrolling for navigation links
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
                 const target = document.querySelector(this.getAttribute('href'));
                 if (target) {
-                    target.scrollIntoView({
-                        behavior: 'smooth',
-                        block: 'start'
+                    const offsetTop = target.offsetTop - 80; // Account for fixed navbar
+                    window.scrollTo({
+                        top: offsetTop,
+                        behavior: 'smooth'
                     });
                 }
             });
@@ -597,11 +894,24 @@
         }, observerOptions);
 
         // Observe elements for animation
-        document.querySelectorAll('.service-card, .about-text, .about-image').forEach(el => {
+        document.querySelectorAll('.service-card, .about-text, .about-video').forEach(el => {
             el.style.opacity = '0';
             el.style.transform = 'translateY(30px)';
             el.style.transition = 'opacity 0.8s ease, transform 0.8s ease';
             observer.observe(el);
+        });
+
+        // Prevent zoom on input focus (iOS Safari fix)
+        document.querySelectorAll('input, textarea').forEach(input => {
+            input.addEventListener('focus', function() {
+                const viewport = document.querySelector('meta[name="viewport"]');
+                viewport.setAttribute('content', 'width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no');
+            });
+            
+            input.addEventListener('blur', function() {
+                const viewport = document.querySelector('meta[name="viewport"]');
+                viewport.setAttribute('content', 'width=device-width, initial-scale=1.0');
+            });
         });
     </script>
 </body>
