--- a/index.html
+++ b/index.html
@@ -317,9 +317,13 @@
             width: 100%;
             height: 100%;
             border-radius: 20px;
-            border: none;
-            outline: none;
-            box-shadow: none;
+            border: none !important;
+            outline: none !important;
+            box-shadow: none !important;
+            background: none !important;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
         }
 
         /* Services Section */
@@ -449,7 +453,20 @@
             padding: 2rem 0;
         }
 
-        /* Mobile Responsiveness */
+        /* Additional iframe fixes for mobile */
+        iframe {
+            border: 0 !important;
+            outline: 0 !important;
+            box-shadow: none !important;
+            -webkit-box-shadow: none !important;
+            -moz-box-shadow: none !important;
+        }
+
+        /* Remove any potential container borders */
+        .about-video * {
+            border: none !important;
+            outline: none !important;
+        }
         @media (max-width: 768px) {
             .container {
                 padding: 0 15px;
