--- a/index.html
+++ b/index.html
@@ -300,30 +300,33 @@
         }
 
         .about-video {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #ffffff;
             height: 400px;
-            border-radius: 20px;
+            border-radius: 15px;
+            padding: 15px;
+            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
             display: flex;
             align-items: center;
             justify-content: center;
-            color: white;
-            font-size: 1.2rem;
-            text-align: center;
+            position: relative;
             overflow: hidden;
+        }
+
+        .video-wrapper {
+            width: 100%;
+            height: 100%;
+            border-radius: 10px;
+            overflow: hidden;
+            background: #000;
             position: relative;
         }
 
         .about-video iframe {
             width: 100%;
             height: 100%;
-            border-radius: 20px;
-            border: none !important;
-            outline: none !important;
-            box-shadow: none !important;
-            background: none !important;
-            -webkit-appearance: none;
-            -moz-appearance: none;
-            appearance: none;
+            border: none;
+            border-radius: 10px;
+            display: block;
         }
 
         /* Services Section */
@@ -549,10 +552,11 @@
             .about-video {
                 height: 250px;
                 order: -1;
+                padding: 10px;
             }
 
             .about-video iframe {
-                border-radius: 15px;
+                border-radius: 8px;
             }
 
             /* Services Section */
@@ -632,10 +636,11 @@
 
             .about-video {
                 height: 200px;
+                padding: 8px;
             }
 
             .about-video iframe {
-                border-radius: 10px;
+                border-radius: 6px;
             }
 
             .btn-primary,
@@ -742,15 +747,17 @@
                     <a href="#contact" class="cta-button">Partner With Us</a>
                 </div>
                 <div class="about-video">
-                    <iframe 
-                        width="560" 
-                        height="315" 
-                        src="https://www.youtube.com/embed/53yPfrqbpkE?autoplay=1&mute=1&controls=0&disablekb=1&modestbranding=1&rel=0&playsinline=1&fs=0" 
-                        title="YouTube video player" 
-                        frameborder="0" 
-                        allow="autoplay; encrypted-media" 
-                        allowfullscreen="false">
-                    </iframe>
+                    <div class="video-wrapper">
+                        <iframe 
+                            width="560" 
+                            height="315" 
+                            src="https://www.youtube.com/embed/53yPfrqbpkE?autoplay=1&mute=1&controls=0&disablekb=1&modestbranding=1&rel=0&playsinline=1&fs=0" 
+                            title="YouTube video player" 
+                            frameborder="0" 
+                            allow="autoplay; encrypted-media" 
+                            allowfullscreen="false">
+                        </iframe>
+                    </div>
                 </div>
             </div>
         </div>
