--- a/strategy-consulting.html
+++ b/strategy-consulting.html
@@ -101,6 +101,18 @@
             transition: 0.3s;
         }
 
+        .mobile-menu-btn.active span:nth-child(1) {
+            transform: rotate(-45deg) translate(-5px, 6px);
+        }
+
+        .mobile-menu-btn.active span:nth-child(2) {
+            opacity: 0;
+        }
+
+        .mobile-menu-btn.active span:nth-child(3) {
+            transform: rotate(45deg) translate(-5px, -6px);
+        }
+
         .mobile-menu {
             display: none;
             position: fixed;
@@ -113,6 +125,10 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
         }
 
+        .mobile-menu.active {
+            display: block;
+        }
+
         .mobile-menu ul {
             list-style: none;
             text-align: center;
@@ -120,6 +136,18 @@
 
         .mobile-menu ul li {
             margin: 1rem 0;
+        }
+
+        .mobile-menu ul li a {
+            text-decoration: none;
+            color: #333;
+            font-size: 1.2rem;
+            font-weight: 500;
+            transition: color 0.3s ease;
+        }
+
+        .mobile-menu ul li a:hover {
+            color: #667eea;
         }
 
         /* Hero Section */
