--- a/index.html
+++ b/index.html
@@ -781,10 +781,11 @@
                     <p>Cutting-edge solutions designed to transform your business processes and drive efficiency.</p>
                     <a href="innovation-solutions.html" style="display: inline-block; margin-top: 1rem; color: #667eea; font-weight: 600; text-decoration: none;">Learn More →</a>
                 </div>
-                <div class="service-card">
+                <div class="service-card" onclick="window.location.href='growth-acceleration.html'" style="cursor: pointer;">
                     <div class="service-icon">📈</div>
                     <h3>Growth Acceleration</h3>
                     <p>Proven strategies and tools to scale your business and maximize your return on investment.</p>
+                    <a href="growth-acceleration.html" style="display: inline-block; margin-top: 1rem; color: #667eea; font-weight: 600; text-decoration: none;">Learn More →</a>
                 </div>
             </div>
         </div>
