--- a/growth-acceleration.html
+++ b/growth-acceleration.html
@@ -856,5 +856,6 @@
             el.style.transition = 'opacity 0.8s ease, transform 0.8s ease';
             observer.observe(el);
         });
+    </script>
 </body>
 </html>
