--- a/growth-acceleration.html
+++ b/growth-acceleration.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Growth Acceleration - ARCLINE ADVISORY</title>
     <style>
         * {
