--- a/growth-acceleration.html
+++ b/growth-acceleration.html
@@ -501,6 +501,11 @@
                 padding: 0 15px;
             }
 
+            /* Navigation */
+            nav {
+                padding: 0.75rem 0;
+            }
+
             .nav-links {
                 display: none;
             }
@@ -511,6 +516,10 @@
 
             .cta-button {
                 display: none;
+            }
+
+            .logo {
+                font-size: 1.5rem;
             }
 
             .hero h1 {
