--- a/innovation-solutions.html
+++ b/innovation-solutions.html
@@ -499,6 +499,11 @@
                 padding: 0 15px;
             }
 
+            /* Navigation */
+            nav {
+                padding: 0.75rem 0;
+            }
+
             .nav-links {
                 display: none;
             }
@@ -509,6 +514,10 @@
 
             .cta-button {
                 display: none;
+            }
+
+            .logo {
+                font-size: 1.5rem;
             }
 
             .hero h1 {
