--- a/innovation-solutions.html
+++ b/innovation-solutions.html
@@ -764,7 +764,7 @@
                             <iframe 
                                 width="560" 
                                 height="315" 
-                                src="https://www.youtube.com/embed/xYHRrmhjznI?autoplay=1&mute=1&controls=0&disablekb=1&modestbranding=1&rel=0&playsinline=1&fs=0" 
+                                src="https://www.youtube.com/embed/xYHRrmhjznI?autoplay=1&mute=1&controls=0&disablekb=1&modestbranding=1&rel=0&playsinline=1&fs=0&loop=1&playlist=xYHRrmhjznI" 
                                 title="Medical Innovation Video" 
                                 frameborder="0" 
                                 allow="autoplay; encrypted-media" 
