--- a/innovation-solutions.html
+++ b/innovation-solutions.html
@@ -760,6 +760,11 @@
                         <p>From AI-powered diagnostics to telemedicine platforms, we implement the most advanced healthcare technologies to transform your medical practice.</p>
                     </div>
                     <div class="tech-video">
+                        <div style="text-align: center; margin-bottom: 1rem; padding: 0 1rem;">
+                            <p style="font-size: 0.9rem; color: #666; font-style: italic;">
+                                *Video used for demonstration and UI design purposes only. Content is not owned by ARCLINE ADVISORY.
+                            </p>
+                        </div>
                         <div class="tech-video-wrapper">
                             <iframe 
                                 width="560" 
