--- a/innovation-solutions.html
+++ b/innovation-solutions.html
@@ -759,22 +759,24 @@
                         <p>Our medical technology solutions are designed to revolutionize healthcare delivery, improve patient outcomes, and streamline clinical workflows through advanced digital health platforms.</p>
                         <p>From AI-powered diagnostics to telemedicine platforms, we implement the most advanced healthcare technologies to transform your medical practice.</p>
                     </div>
-                    <div class="tech-video">
-                        <div style="text-align: center; margin-bottom: 1rem; padding: 0 1rem;">
-                            <p style="font-size: 0.9rem; color: #666; font-style: italic;">
-                                *Video used for demonstration and UI design purposes only. Content is not owned by ARCLINE ADVISORY.
+                    <div>
+                        <div style="text-align: center; margin-bottom: 1rem;">
+                            <p style="font-size: 0.85rem; color: #888; font-style: italic;">
+                                *Video used for demonstration and UI design purposes only
                             </p>
                         </div>
-                        <div class="tech-video-wrapper">
-                            <iframe 
-                                width="560" 
-                                height="315" 
-                                src="https://www.youtube.com/embed/xYHRrmhjznI?autoplay=1&mute=1&controls=0&disablekb=1&modestbranding=1&rel=0&playsinline=1&fs=0&loop=1&playlist=xYHRrmhjznI" 
-                                title="Medical Innovation Video" 
-                                frameborder="0" 
-                                allow="autoplay; encrypted-media" 
-                                allowfullscreen="false">
-                            </iframe>
+                        <div class="tech-video">
+                            <div class="tech-video-wrapper">
+                                <iframe 
+                                    width="560" 
+                                    height="315" 
+                                    src="https://www.youtube.com/embed/xYHRrmhjznI?autoplay=1&mute=1&controls=0&disablekb=1&modestbranding=1&rel=0&playsinline=1&fs=0&loop=1&playlist=xYHRrmhjznI" 
+                                    title="Medical Innovation Video" 
+                                    frameborder="0" 
+                                    allow="autoplay; encrypted-media" 
+                                    allowfullscreen="false">
+                                </iframe>
+                            </div>
                         </div>
                     </div>
                 </div>
