--- a/innovation-solutions.html
+++ b/innovation-solutions.html
@@ -580,6 +580,12 @@
 
             .section-title {
                 font-size: 2rem;
+                margin-bottom: 1.5rem;
+            }
+
+            .section-subtitle {
+                font-size: 1rem;
+                margin-bottom: 2rem;
             }
 
             .solutions-detailed {
@@ -588,7 +594,21 @@
             }
 
             .solution-detail {
-                padding: 2rem;
+                padding: 2rem 1.5rem;
+            }
+
+            .solution-detail-icon {
+                width: 80px;
+                height: 80px;
+                font-size: 2rem;
+            }
+
+            .solution-detail h3 {
+                font-size: 1.5rem;
+            }
+
+            .solution-detail p {
+                font-size: 1rem;
             }
 
             /* Technologies Section */
@@ -598,7 +618,7 @@
             }
 
             .tech-video {
-                height: 250px;
+                height: 220px;
                 order: -1;
                 padding: 10px;
             }
@@ -608,36 +628,80 @@
             }
 
             .tech-text h3 {
-                font-size: 1.8rem;
+                font-size: 1.6rem;
+                text-align: center;
             }
 
             .tech-text p {
-                font-size: 1rem;
+                font-size: 0.95rem;
+                text-align: center;
             }
 
             .tech-grid {
-                grid-template-columns: repeat(2, 1fr);
+                grid-template-columns: 1fr;
+                gap: 1.5rem;
+                margin-top: 2rem;
+            }
+
+            .tech-card {
+                padding: 1.5rem;
+            }
+
+            .tech-icon {
+                font-size: 2.5rem;
+            }
+
+            .tech-card h4 {
+                font-size: 1.2rem;
+            }
+
+            .tech-card p {
+                font-size: 0.85rem;
             }
 
             .process-timeline {
                 grid-template-columns: 1fr;
+                gap: 1.5rem;
+            }
+
+            .timeline-step {
+                padding: 2rem 1.5rem;
+            }
+
+            .timeline-step h4 {
+                font-size: 1.2rem;
+            }
+
+            .timeline-step p {
+                font-size: 0.9rem;
             }
 
             .cta-buttons {
                 flex-direction: column;
                 align-items: center;
+                gap: 1rem;
             }
 
             .btn-primary,
             .btn-secondary {
-                width: 250px;
+                width: 280px;
                 text-align: center;
+                padding: 0.9rem 1.5rem;
             }
 
             .tech-section,
             .innovation-process,
             .cta-section {
-                margin: 3rem -15px;
+                margin: 2rem -15px;
+                padding: 3rem 0;
+            }
+
+            .cta-section h2 {
+                font-size: 2rem;
+            }
+
+            .cta-section p {
+                font-size: 1rem;
             }
         }
     </style>
