--- a/growth-acceleration.html
+++ b/growth-acceleration.html
@@ -331,6 +331,56 @@
             margin: 0 -20px;
         }
 
+        .metrics-content {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 4rem;
+            align-items: center;
+            margin-bottom: 3rem;
+        }
+
+        .metrics-video {
+            background: #ffffff;
+            height: 400px;
+            border-radius: 15px;
+            padding: 15px;
+            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .metrics-video-wrapper {
+            width: 100%;
+            height: 100%;
+            border-radius: 10px;
+            overflow: hidden;
+            background: #000;
+            position: relative;
+        }
+
+        .metrics-video iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+            border-radius: 10px;
+            display: block;
+        }
+
+        .metrics-text h3 {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+            color: #333;
+        }
+
+        .metrics-text p {
+            font-size: 1.1rem;
+            color: #666;
+            margin-bottom: 1.5rem;
+        }
+
         .metrics-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -543,8 +593,52 @@
                 padding: 2rem;
             }
 
+            /* Metrics Section */
+            .metrics-content {
+                grid-template-columns: 1fr;
+                gap: 2rem;
+            }
+
+            .metrics-video {
+                height: 220px;
+                order: -1;
+                padding: 10px;
+            }
+
+            .metrics-video iframe {
+                border-radius: 8px;
+            }
+
+            .metrics-text h3 {
+                font-size: 1.6rem;
+                text-align: center;
+            }
+
+            .metrics-text p {
+                font-size: 0.95rem;
+                text-align: center;
+            }
+
             .metrics-grid {
                 grid-template-columns: repeat(2, 1fr);
+                gap: 1.5rem;
+                margin-top: 2rem;
+            }
+
+            .metric-card {
+                padding: 2rem 1.5rem;
+            }
+
+            .metric-number {
+                font-size: 2.5rem;
+            }
+
+            .metric-label {
+                font-size: 1rem;
+            }
+
+            .metric-description {
+                font-size: 0.8rem;
             }
 
             .timeline-steps {
@@ -680,6 +774,34 @@
             <div class="container">
                 <h2 class="section-title">Healthcare Growth Metrics</h2>
                 <p class="section-subtitle">Track and measure your medical practice growth with key healthcare performance indicators that matter most for clinical and financial success.</p>
+                
+                <div class="metrics-content">
+                    <div class="metrics-text">
+                        <h3>Accelerated Healthcare Growth</h3>
+                        <p>Our proven healthcare growth strategies deliver measurable results that transform medical practices and accelerate patient acquisition while maintaining exceptional care quality.</p>
+                        <p>From revenue optimization to operational efficiency, we implement data-driven solutions that scale your healthcare organization sustainably.</p>
+                    </div>
+                    <div>
+                        <div style="text-align: center; margin-bottom: 1rem;">
+                            <p style="font-size: 0.85rem; color: #888; font-style: italic;">
+                                *Video used for demonstration and UI design purposes only
+                            </p>
+                        </div>
+                        <div class="metrics-video">
+                            <div class="metrics-video-wrapper">
+                                <iframe 
+                                    width="560" 
+                                    height="315" 
+                                    src="https://www.youtube.com/embed/zXPEBbEZLB8?autoplay=1&mute=1&controls=0&disablekb=1&modestbranding=1&rel=0&playsinline=1&fs=0&loop=1&playlist=zXPEBbEZLB8" 
+                                    title="Healthcare Growth Video" 
+                                    frameborder="0" 
+                                    allow="autoplay; encrypted-media" 
+                                    allowfullscreen="false">
+                                </iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 
                 <div class="metrics-grid">
                     <div class="metric-card">
@@ -859,7 +981,7 @@
         }, observerOptions);
 
         // Observe elements for animation
-        document.querySelectorAll('.growth-area, .metric-card, .timeline-step').forEach(el => {
+        document.querySelectorAll('.growth-area, .metric-card, .timeline-step, .metrics-text, .metrics-video').forEach(el => {
             el.style.opacity = '0';
             el.style.transform = 'translateY(30px)';
             el.style.transition = 'opacity 0.8s ease, transform 0.8s ease';
