--- a/growth-acceleration.html
+++ b/growth-acceleration.html
@@ -303,7 +303,6 @@
         @media (max-width: 768px) {
             .growth-areas {
                 display: flex;
-                grid-template-columns: none;
                 gap: 1.5rem;
                 margin-bottom: 2rem;
                 overflow-x: auto;
@@ -331,23 +330,15 @@
             border-radius: 20px;
             box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
             border: 1px solid rgba(102, 126, 234, 0.1);
-            transition: none;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
             position: relative;
             overflow: hidden;
         }
 
-        .growth-area::before {
-            display: none;
-        }
-
         .growth-area:hover {
-            transform: none;
-            box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
-            border-color: rgba(102, 126, 234, 0.1);
-        }
-
-        .growth-area:hover::before {
-            display: none;
+            transform: translateY(-5px);
+            box-shadow: 0 25px 60px rgba(0, 0, 0, 0.15);
+            border-color: rgba(102, 126, 234, 0.2);
         }
 
         .growth-area:active {
@@ -481,7 +472,6 @@
         @media (max-width: 768px) {
             .metrics-grid {
                 display: flex;
-                grid-template-columns: none;
                 gap: 1.2rem;
                 overflow-x: auto;
                 scroll-snap-type: x mandatory;
@@ -760,13 +750,8 @@
                 padding: 0 8px;
             }
 
-            .growth-areas {
-                /* Mobile scrolling styles already defined above */
-            }
-
             .growth-area {
                 padding: 2rem 1.5rem;
-                /* flex and scroll-snap styles already defined above */
             }
 
             .growth-area-icon {
@@ -816,13 +801,8 @@
                 padding: 0 8px;
             }
 
-            .metrics-grid {
-                /* Mobile scrolling styles already defined above */
-            }
-
             .metric-card {
                 padding: 1.5rem 1rem;
-                /* flex and scroll-snap styles already defined above */
             }
 
             .metric-icon {
@@ -1080,15 +1060,15 @@
     <nav id="navbar">
         <div class="container">
             <div class="nav-container">
-                <a href="index.html" class="logo">ARCLINE ADVISORY</a>
+                <a href="#" class="logo">ARCLINE ADVISORY</a>
                 <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html#about">About</a></li>
-                    <li><a href="index.html#services">Services</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
                     <li><a href="#" class="active">Growth Acceleration</a></li>
-                    <li><a href="index.html#contact">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
-                <a href="index.html#contact" class="cta-button">Get Started</a>
+                <a href="#contact" class="cta-button">Get Started</a>
                 <div class="mobile-menu-btn" id="mobileMenuBtn">
                     <span></span>
                     <span></span>
@@ -1098,11 +1078,11 @@
         </div>
         <div class="mobile-menu" id="mobileMenu">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="index.html#services">Services</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
                 <li><a href="#" class="active">Growth Acceleration</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -1111,7 +1091,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="breadcrumb">
-                    <a href="index.html">Home</a> / <span>Growth Acceleration</span>
+                    <a href="#home">Home</a> / <span>Growth Acceleration</span>
                 </div>
                 <h1>📈 Growth Acceleration</h1>
                 <p>Accelerate your healthcare organization's growth with proven medical strategies and tools designed to scale your practice, maximize patient satisfaction, and optimize ROI.</p>
@@ -1328,8 +1308,8 @@
             <h2>Ready to Accelerate Your Healthcare Growth?</h2>
             <p>Transform your medical practice with proven growth strategies that deliver measurable results.</p>
             <div class="cta-buttons">
-                <a href="index.html#contact" class="btn-primary">Start Growing Today</a>
-                <a href="index.html#services" class="btn-secondary">Explore Services</a>
+                <a href="#contact" class="btn-primary">Start Growing Today</a>
+                <a href="#services" class="btn-secondary">Explore Services</a>
             </div>
         </div>
     </section>
